assets/css/style.css
.game {
    background: url("../images/homer_cropped.png");
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    font-family: 'Simpsonfont';
}

.home {
    background: url("../images/Simpsons_House.jpg");
    background-size: cover;
    background-position: center center;
    color: #fcd424;
    background-repeat: no-repeat;
    background-attachment: fixed;

}

/*CSS to import Simpsons font*/
@font-face {
    font-family: Simpsonfont;
    src: url("../font/Simpsonfont.ttf") format("truetype");
}

.nav-link {
    font-size: 2em !important;
    font-family: 'Simpsonfont';
    color: #fcd424 !important;
    padding-right: 1em !important;
}

.navbar-brand {
    padding-left: 0.5em;
}
.navbar-toggler {
    color:#fcd424 !important;
    margin-right: 5px;
    }

/* CSS to add interactive element to navbar logo (donut) */
#donut {

    border-radius: 50%;
    -webkit-transition: -webkit-transform 0.8s ease-in-out;
    transition: transform 0.8s ease-in-out;
}

#donut:hover {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
}


.nav-link:hover {
    text-decoration: underline;
}

/* --Custom CSS for Modal--- */

.modal-title,
.contact-header {
    font-family: 'Simpsonfont', serif;
    font-weight: 800;
    text-align: center;
    color: #fcd424;
}

.modal-content {
    background: url("../images/clouds.jpg");
    background-color: #70D1FE;
    text-align: center;
    border-bottom: transparent;
    max-width: 450px;
    font-family: 'Simpsonfont';
    font-weight: 700;
}

.modal-header {
    background: url("../images/clouds.jpg");
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: fixed;
    padding: 0.5rem 0.5rem;
    background-color: #70D1FE;
}

.modal-body {
    background: url("../images/clouds.jpg");
    padding: 0.5em;
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: fixed;
    padding: 0.5rem 0.5rem;
    background-color: #70D1FE;
    color: black;
}

.modal-header .btn-close {
    padding: 0.5rem 1rem;
    margin: -.5rem -.5rem -.5rem auto;
}

.play,
.help {
    font-family: 'Simpsonfont', serif;
    font-size: 1.5em;
}

.submit:hover {
    color: var(--dark);
    background-color: var(--white);
    border: 2px solid #6c757d;
}

.reset {
    border: 2px solid #6c757d;
}

.reset:hover {
    background-color: #6c757d;
    color: var(--white);
}

.btn-check:focus+.btn-light,
.btn-light:focus {
    color: var(--white);
    background-color: var(--dark);
    border-color: var(--dark);
    box-shadow: 0 0 0 0.25rem rgb(211 212 213 / 50%);
}

.play {
    background-color: white !important;
    border: 2px var(--white);
    color: black !important;
}

.play:hover {
    background-color: grey !important;
    border-color: var(--white);
    color: var(--dark)
}

a,
a:hover {
    color: var(--white);
    text-decoration: none;
}

.btn-light.help:hover {
    background-color: grey;
    border: 1px solid black;
    color: var(--white);
}

a,
a:hover {
    text-decoration: none;
    color: inherit;
}

.modal-footer {
    background: url("../images/clouds.jpg");
    justify-content: center;
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: fixed;
    padding: 0.5rem 0.5rem;
    background-color: aqua;
}

/* end of modal CSS */

#next-question {

    width: 190px;
    height: 50px;
    margin-bottom: 25px;
    margin-left: 28%;
    padding: 0 10px;
    text-align: center;
    font-size: 30px;
    color: #333 !important;
    background: #70D1FE;
    font-family: 'Simpsonfont';
    border-radius: 5%;
    display: flex;
    justify-content: center;
    align-items: center;
    border-color: black;
}

h2 {

    text-align: center;

}

.question-container {
    padding-left: 20px;
    display: flex;
    flex-direction: column;

}

#return-btn1 {
    text-decoration: underline !important;
      
}

#score-table {
    margin-top: 5px;
}

#correct_answers {
    color: green;
}

#incorrect_answers {
    color: red;
}

/* media query for majority of desktop sizes */

@media only screen and (min-width: 770px) and (max-width: 1960px) {
    .question-container {
        width: 60%;
        
    }

    h2 {
        font-size: 2em;
        width: 806.22px;
    }

    .answer-box {
        margin-bottom: 40px !important;
    }

    .answer-box:hover {
        background-image: url("../images/clouds.jpg");

    }
    

}

/* media query for ultrawide screens */

@media only screen and (min-width: 1961px) {
    h2 {
        width: 980px;
        
    }

    .question-container {
        width: 60%;
        margin-top: 100px;
    }

    h2 {
        font-size: 2.8em;
    }

    .answer-box {
        margin-bottom: 40px !important;
    }

    h2 {
        width: 1100px;
        margin-left: 10px;
    }

     #return-btn1 {
        text-align: center !important;
    }

    .answer-box:hover {
        background-image: url("../images/clouds.jpg");
    }

    
}

/*media query for mobile phones */

@media only screen and (max-width: 768px) {
    .question-container {
        width: 100%;
    }

    .game {
        background-image: url("../images/homercroppedss.jpg");
        background-size: cover;
        background-position: center center;
        background-repeat: no-repeat;
        background-attachment: fixed;
    }

    .question-container h2 {
        margin-right: 50px;
        text-align: center;
    }

    
    #next-question {
        margin-left: 70px;
    }

        #answers {
        height: 50% !important;
        margin-bottom: 5%;
        }

        #return-btn1 {
            margin-left: 100px;
        }

        .answer-box {
            width: 300px;
            height: 70px;
            font-size: larger;
            align-items: center;
            display: flex;
            justify-content: center;
            
        }
h2 {
    font-size: larger;
}
}

/* Media query to target smaller mobile screens */

@media only screen and (max-width: 393px) {
    #next-question {
        margin-bottom: 0px;
        margin-left: 55px;

    }

    h2 {
        margin-top: 0px;
        margin-bottom: 10px;
    }

    #answers {
        height: 50% !important;
        margin-bottom: 5%;
        
    }
    #return-btn1 {
        margin-left: 100px;
    }

    .answer-box {
        width: 300px;
        height: 40px;
        font-size: medium;
        align-items: center;
        display: flex;
        justify-content: center;
        
    }

    .game {
        background-image: url("../images/simpsonsyellow.jpg");
}

    #correct_score, #incorrect_score {
        font-size: 25px;
    }

}


/* end of mobile media query */

#btn_container {
    width: 40px;
    height: 40px;
    border-radius: 5px;
    float: left;
    text-align: center;
    cursor: pointer;
}

.btn span {
    display: inline-block;
    width: 120px;
    vertical-align: middle;
    cursor: pointer;
}


/*Hide bullet points of list */

ul {
    list-style: none;
    align-content: center;
}

.answer-box {
    border-style: solid;
    width: 70%;
    margin-bottom: 20px;
    text-align: center;
    cursor: pointer;
    border-color: black;

}

#score-table {
    font-size: 15px;
    display: flex;
    
}

#incorrect_answers,
#correct_answers {
    font-size: 40px;
    padding-inline: 25px;

}


/* Custom CSS for Footer - Boostrap template and styled with custom CSS*/

.footer-list {
    display: flex;
    align-items: stretch;
    /* Default */
    justify-content: space-evenly;
    width: 100%;

    margin: 0;
    padding: 0;
}

.footer-item {
    display: block;
    flex: 0 1 auto;
    /* Default */
    list-style-type: none;
}

.footer-item {
    color: #fcd424;
}

.footer-item i {
    color: #fcd424;
}

footer {
    background-color: rgb(15, 146, 15);
    opacity: 50%;
    ;
}

.btn {
    color: #fcd424;
}

/* End of Footer CSS */

